# mrki-ai-backend

./: .dockerignore  .editorconfig  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY_GUIDE.md  Dockerfile  GITHUB_PUSH_GUIDE.md  INTEGRATION.md  LICENSE  MANIFEST.in  Makefile  NOTICE  README.md  Root Directory  SECURITY.md  SETUP_GUIDE.md  SwarmVisualizer.tsx  config.example.yaml  docker-compose.full.yml  docker-compose.yml  kernel.js  main.py  main.yml  mkdocs.yml  pyproject.toml  render.yaml  renovate.json  requirements.txt  setup.py  tox.ini  yml
.github/: FUNDING.yml  dependabot.yml  labels.yml  pull_request_template.md  release.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  docs.yml  release.yml  stale.yml
api/: __init__.py  main.py  middleware.py
client/: README.md  metro.config.js  package.json  react-native.config.js  tsconfig.json
client/desktop/: forge.config.js  index.html  main.js  package.json  preload.js
client/desktop/src/: index.html  main.ts  preload.ts  renderer.tsx  styles.css
client/mobile/: app.json  index.js  package-lock.json  package.json
client/mobile/android/: build.gradle  gradle.properties  settings.gradle
client/mobile/ios/: Podfile
client/mobile/src/: App.tsx
client/shared/hooks/: usePlatform.ts  useSync.ts  useWebSocket.ts
client/shared/services/: notifications.ts  offlineQueue.ts  storage.ts  sync.ts  websocket.ts
client/shared/types/: index.ts
client/shared/utils/: platform.ts
client/src/: App.tsx
client/src/components/: AdaptiveButton.tsx  AdaptiveText.tsx  AdaptiveView.tsx  AgentCard.tsx  TaskList.tsx
client/src/hooks/: useWebSocket.ts
client/src/screens/: AgentsScreen.tsx  HomeScreen.tsx  SettingsScreen.tsx  TasksScreen.tsx
core/: __init__.py  agent_pool.py  config.yaml  example_usage.py  orchestrator.py  requirements.txt  state_manager.py  task_decomposer.py  tool_registry.py  verifier.py
dev_env/: README.md  __init__.py  cicd.py  cli.py  git_ops.py  project_scaffolder.py
dev_env/api_builder/: __init__.py  builder.py
dev_env/code_gen/: __init__.py  csharp_gen.py  generator.py  go_gen.py  java_gen.py  javascript_gen.py  python_gen.py  rust_gen.py  typescript_gen.py
dev_env/database/: __init__.py  manager.py
dev_env/docker/: __init__.py  manager.py
dev_env/templates/fastapi-vue/: README.md
dev_env/templates/go-react/: README.md
dev_env/templates/mern/: README.md
dev_env/testing/: __init__.py  manager.py
docker/: config.yaml
docs/: index.md
docs/api/: index.md
docs/guides/: configuration.md  examples.md  faq.md  installation.md  plugins.md  roadmap.md  usage.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: Sidebar.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: Dashboard.tsx  Login.tsx  Modules.tsx  Settings.tsx  Tasks.tsx  Workflows.tsx
frontend/src/styles/: index.css
frontend/src/utils/: api.ts
gamedev/: README.md  api.py
gamedev/ai/: __init__.py  npc_ai.py  procedural_generation.py
gamedev/animation/: __init__.py  animation_controllers.py  tween_systems.py
gamedev/code_gen/: __init__.py  game_code_generator.py  generator.py  pattern_library.py
gamedev/deploy/: __init__.py  build_scripts.py  deployment_configs.py
gamedev/godot/: __init__.py  gdscript_generator.py  godot_adapter.py  scene_generator.py
gamedev/godot/templates/: game_manager.gd  player_controller.gd  state_machine.gd
gamedev/physics/: __init__.py  collision_systems.py  physics_templates.py
gamedev/templates/: __init__.py
gamedev/unity/: __init__.py  csharp_generator.py  templates.py  unity_adapter.py
gamedev/unity/templates/: GameManager.cs  PlayerController.cs  StateMachine.cs
gamedev/unreal/: __init__.py  blueprint_generator.py  cpp_generator.py  unreal_adapter.py
gamedev/unreal/templates/: ActorBase.cpp  ActorBase.h  CharacterBase.cpp  CharacterBase.h
ide_integration/: FILES.md  README.md  file_watcher.py  install.sh  terminal_ui.py
ide_integration/cli/: README.md  mrki.py  setup.py
ide_integration/cursor/: README.md  package.json  tsconfig.json
ide_integration/cursor/src/: composer.ts  contextSync.ts  extension.ts  inlineCompletionBridge.ts
ide_integration/dap/: README.md  server.py
ide_integration/lsp/: README.md  server.py
ide_integration/vscode/: README.md  install.sh  package.json  tsconfig.json
ide_integration/vscode/src/: chatProvider.ts  codeActions.ts  debugAdapter.ts  extension.ts  inlineCompletion.ts  languageClient.ts  statusBar.ts
ide_integration/zed/: Cargo.toml  README.md  extension.toml
ide_integration/zed/languages/mrki/: config.toml  highlights.scm
ide_integration/zed/src/: lib.rs
infrastructure/: DELIVERABLES.md  README.md
infrastructure/backup/scripts/: 02-database-backup.yaml
infrastructure/backup/velero/: 01-velero.yaml
infrastructure/k8s/base/: 01-configmap.yaml  02-secrets.yaml  03-deployment.yaml  04-services.yaml  05-ingress.yaml  07-vpa.yaml
infrastructure/k8s/hpa/: 06-hpa.yaml
infrastructure/k8s/namespaces/: 00-namespaces.yaml
infrastructure/monitoring/grafana/: 02-grafana.yaml
infrastructure/monitoring/loki/: 03-loki.yaml
infrastructure/monitoring/prometheus/: 01-prometheus.yaml
infrastructure/networking/cdn/: 03-cdn.yaml
moe/: config.yaml  expert_manager.py  expert_registry.py  fine_tuning.py  local_inference.py  model_loader.py  quantizer.py  router.py
scripts/: release.sh  setup.sh
src/mrki/: __init__.py  __main__.py  cli.py  client.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_api.py
tests/unit/: __init__.py  test_task.py  test_workflow.py
visual_engine/: .env.example  Dockerfile  README.md  __init__.py  analyzer.py  api.py  code_generator.py  config.py  design_extractor.py  docker-compose.yml  examples.py  requirements.txt  sketch_processor.py  test_visual_engine.py  visual_debugger.py
(+59 files in other folders)
